# snappy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  angora_fuzzer  rustfmt.toml
common/: Cargo.toml  build.rs
common/src/: afl_snapshot.rs  cond_stmt_base.rs  config.rs  defs.rs  fork_client.rs  lib.rs  log_data.rs  shm.rs  test_case.rs
fuzzer/: CMakeLists.txt  Cargo.toml
fuzzer/benches/: delayed_forksrv.rs  trace_handling.rs
fuzzer/src/: branches.rs  check_dep.rs  command.rs  fuzz_loop.rs  fuzz_main.rs  fuzz_type.rs  lib.rs
fuzzer/src/cond_stmt/: cond_state.rs  cond_stmt.rs  mod.rs  shm_conds.rs
fuzzer/src/depot/: depot.rs  sync.rs
fuzzer/src/executor/: executor.rs  forksrv.rs  limit.rs  mod.rs  pipe_fd.rs  pollable.rs  status_type.rs  test_case_shm.rs
fuzzer/src/mut_input/: mut_input.rs
fuzzer/src/search/: afl.rs  cbh.rs  cmpfn.rs  exploit.rs  gd.rs  handler.rs  len.rs  mb.rs  mod.rs  random.rs
fuzzer/src/stats/: bunny.rs  chart.rs  entry.rs  fuzz.rs  local.rs  search.rs  show.rs  state.rs
fuzzer/src/track/: filter.rs  fparser.rs
llvm_mode/: .gitignore  CMakeLists.txt
llvm_mode/compiler/: CMakeLists.txt  alloc_inl.h  angora_clang.c  install_locations.h.in
llvm_mode/dfsan_rt/: CMakeLists.txt
llvm_mode/dfsan_rt/cmake/: base-config-ix.cmake  config-ix.cmake
llvm_mode/dfsan_rt/include/sanitizer/: angora_dfsan_interface.h
llvm_mode/dfsan_rt/lib/: CMakeLists.txt
llvm_mode/dfsan_rt/lib/dfsan/: CMakeLists.txt  dfsan.cc  dfsan.cc.patch  dfsan.h  dfsan.h.patch  dfsan_custom.cc  dfsan_custom.cc.patch  dfsan_platform.h  dfsan_platform.h.patch  done_abilist.txt
llvm_mode/dfsan_rt/lib/sanitizer_common/: sanitizer_platform_limits_posix.cpp  sanitizer_platform_limits_posix.h
llvm_mode/dfsan_snapshot_lib/: .flake8  CMakeLists.txt
llvm_mode/dfsan_snapshot_lib/analysis/: target_function_extractor.py
llvm_mode/dfsan_snapshot_lib/rtlib/: CMakeLists.txt  Cargo.toml  build.rs  project_abilist.txt  wrapper.h  wrapper.hpp
llvm_mode/dfsan_snapshot_lib/rtlib/src/: callbacks.rs  dfsan.rs  heap_tracer.rs  lib.rs  libc_wrappers.rs  snapshot_target_tracer.rs  stack_map_cache.rs  symbols_cache.rs  tainter.rs  tracer.rs
llvm_mode/dfsan_snapshot_lib/rtlib/src/fuzzer/: dummy.rs  mod.rs
llvm_mode/dfsan_snapshot_lib/rtlib/xray_no_common/: CMakeLists.txt
llvm_mode/dfsan_snapshot_lib/scripts/: CMakeLists.txt  clang_dfsan_snapshot.in
llvm_mode/dfsan_snapshot_lib/test/: CMakeLists.txt  generate_snapshot_target.py  lit.cfg.in
llvm_mode/dfsan_snapshot_lib/test/rtlib/: caller.c  inline_caller.c  thread.c
llvm_mode/dfsan_snapshot_lib/test/rtlib/libc_wrappers/: fgetc.c  fgetc_unlocked.c  fgets.c  fread.c  fread_unlocked.c  getc.c  getc_unlocked.c  getdelim.c  getline.c  memchr.c  memcmp.c  mmap.c  pread.c  read.c  snprintf.c  sprintf.c  strcasecmp.c  strchr.c  strcmp.c  strlen.c  strncasecmp.c  strncmp.c  strrchr.c  (+6 more)
llvm_mode/external_lib/: CMakeLists.txt  io_func.c  stdalloc.c  zlib_func.c
llvm_mode/include/: defs.h
llvm_mode/libcxx/: compile.sh
llvm_mode/pass/: CMakeLists.txt
llvm_mode/pass/AngoraPass/: AngoraPass.cpp  CMakeLists.txt  abilist.h
llvm_mode/pass/DFSanPass/: CMakeLists.txt  DFSanPass.cpp  DFSanPass.cpp.patch
llvm_mode/pass/UnfoldBranchPass/: CMakeLists.txt  UnfoldBranchPass.cpp
llvm_mode/rules/: CMakeLists.txt  angora_abilist.txt
llvm_mode/runtime/: CMakeLists.txt  Cargo.toml
llvm_mode/runtime/include/: ffds.h  heapmap.h  len_label.h  log_collect.h  tag_set.h
llvm_mode/runtime/src/: ffds.rs  lib.rs  logger.rs  tag_set.rs  tag_set_wrap.rs  track.rs
llvm_mode/runtime_fast/: CMakeLists.txt  Cargo.toml
llvm_mode/runtime_fast/include/: runtime_fast.h
llvm_mode/runtime_fast/src/: callbacks.rs  context.c  context.rs  fast.rs  init.rs  lib.rs  libc_wrappers.rs  shm_branches.rs  shm_conds.rs  tainter.rs
llvm_mode/snapshot_placement/: CMakeLists.txt
llvm_mode/snapshot_placement/analysis/: Pipfile
llvm_mode/snapshot_placement/rtlib/: CMakeLists.txt  Cargo.toml  build.rs
llvm_mode/snapshot_placement/rtlib/format_buffer/: format_buffer.cpp  format_buffer.h
llvm_mode/snapshot_placement/rtlib/src/: callbacks.rs  lib.rs  libc_wrappers.rs  symbols_cache.rs  tainter.rs  tracer.rs  xray.rs
llvm_mode/snapshot_placement/scripts/: CMakeLists.txt  clang_snapshot_placement.in
llvm_mode/snapshot_placement/test/: CMakeLists.txt  caller.c  exit_hook.c  inline_caller.c  lit.cfg.in
llvm_mode/snapshot_placement/test/libc_wrappers/: fgetc.c  fgetc_unlocked.c  fgets.c  fread.c  fread_unlocked.c  getc.c  getc_unlocked.c  getdelim.c  getline.c  memchr.c  memcmp.c  mmap.c  offsets.json  pread.c  read.c  strcasecmp.c  strchr.c  strcmp.c  strlen.c  strncasecmp.c  strncmp.c  strrchr.c  strstr.c  strtod.c  strtol.c  strtoll.c  strtoul.c  strtoull.c
llvm_mode/snapshot_placement/test/partial_taint/: alternate_begin.c  alternate_end.c  non_overlap_after.c  non_overlap_before.c  overlap_begin.c  overlap_end.c  overlap_in_hole.c  overlap_none.c
llvm_mode/xray_snapshot_lib/: CMakeLists.txt
llvm_mode/xray_snapshot_lib/analysis/: Pipfile  speedup_evaluator.py
llvm_mode/xray_snapshot_lib/rtlib/: CMakeLists.txt  Cargo.toml  build.rs  rustfmt.toml  wrapper.h
llvm_mode/xray_snapshot_lib/rtlib/src/: controller.rs  heap_tracer.rs  lib.rs  resolver.rs  snapshot_target_tracer.rs  stack_map_cache.rs  symbols_cache.rs  xray.rs
llvm_mode/xray_snapshot_lib/scripts/: CMakeLists.txt  clang_xray_snapshot.in
llvm_mode/xray_snapshot_lib/src/: CMakeLists.txt  StackMapper.cpp
llvm_mode/xray_snapshot_lib/test/: CMakeLists.txt  generate_snapshot_target.py  inline_caller.c  lit.cfg.in  stats.c  stats_machine.c  thread.c  xray_hook.c  xray_hook.cpp
llvm_mode/xray_snapshot_lib/test/resolution/: tainted_global_init.c  tainted_global_uninit.c  tainted_global_uninit.c.json  tainted_heap.c  tainted_heap.c.json  tainted_heap_snprintf.c  tainted_heap_snprintf.c.json  tainted_libc_allocation.c  tainted_libc_allocation.c.json  tainted_stack.c  tainted_stack.c.json  tainted_thread_stack.c  tainted_thread_stack.c.json
llvm_mode/xray_snapshot_lib/test/src/: allocas.ll
(+51 files in other folders)
