[package]
name = "angora_common"
version = "1.2.2"
authors = ["sp1npx <spinpx@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
bincode = "1.0"
libc = "0.2"
bitflags = "1.2.1"
snafu = "0.6.10"
byteorder = "1.2"
log = "0.4"

[build-dependencies]
bindgen = "0.53"
cc = "1.0"
