[package]
name = "angora"
version = "1.2.2"
authors = ["spinpx <spinpx@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32"
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.8"
rand_chacha = "0.3.0"
libc = "0.2"
wait-timeout = "0.2"
ctrlc = { version = "3.1", features = ["termination"] }
byteorder = "1.2"
chrono = "0.4"
priority-queue = "1.0"
num_cpus = "1.0"
derive_more = "0.99"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap = "0.7.0"
twoway = "0.2.0"
yaml-rust = "0.4.5"
anyhow = "1.0.38"
bitflags = "1.2.1"
sprs = "0.10.0"
hdrhistogram = "7.3.0"
indicatif = "0.16.2"
csv = "1.1.6"

angora_common = {path = "../common" }

[dev-dependencies]
criterion = "0.3"
tempfile = "3.2.0"

[[bench]]
name = "delayed_forksrv"
harness = false
bench = false

[[bench]]
name = "trace_handling"
harness = false

[profile.bench]
debug = true

[profile.release]
debug = true
