[package]
name = "SnapshotPlacementRT"
version = "0.1.0"
authors = ["Elia Geretto <e.geretto@vu.nl>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[features]
# `angora` should not be a default feature, but I cannot enable it with Corrosion
default = ["angora"]
angora = ["angora_common"]

[dependencies]
libc = "0.2"
once_cell = "1.3"
snafu = "0.6"
log = "0.4"
env_logger = "0.7"
backtrace = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
ctor = "0.1"
procfs = "0.13.0"
angora_common = { path = "../../../common", optional = true}
findshlibs = "0.8.0"
memmap = "0.7.0"
object = "0.23.0"
rangemap = "0.1.12"

[build-dependencies]
bindgen = "0.53"
cc = "1.0"

[profile.release]
debug = true
